--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -6,6 +6,10 @@
   <h1>
     Things
   </h1>
-  <p>Some stuff about things goes here.</p>
+  <form action="{% url 'home' %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
